--- a/index.html
+++ b/index.html
@@ -10,78 +10,84 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container nav-wrap">
             <nav class="navigation">
                 <a href="./index.html" class="navigation-link">Web<span class="navigation-span">Studio</span></a>
                 <ul class="header-list">
-                    <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
+                    <li class="header-item "><a class="header-link studio" href="./index.html">Studio</a></li>
                     <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
                     <li class="header-item"><a class="header-link" href="./contacts.html">Contacts</a></li>
                 </ul>
+            </nav>
                 <address class="contacts">
                     <ul class="contacts-list">
                         <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                     </ul>
                 </address>
-            </nav>
+            <button type="button" class="open-menu-btn">
+                <svg class="open-menu-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-open-menu"></use>
+                </svg>
+            </button>
         </div>
     </header>
     <main>
-        <section class="hero">
+        <!-- <section class="hero section">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="hero-btn"><span class="hero-text-btn">Order Service</span></button>
             </div>
-        </section>
-        <section class="information">
+        </section> -->
+        <section class="information section">
             <div class="container">
                 <h2 class="visually-hidden">Information</h2>
                 <ul class="information-list">
                     <li class="information-item">
-                        <!-- <div class="information-icons"> -->
-                            <!-- <svg class=""> -->
-                                <!-- <use class=""></use> -->
-                            <!-- </svg> -->
-                        <!-- </div> -->
+                        <div class="information-item-icons">
+                            <svg class="info-icons" width="64" height="64">
+                                <use class="" href="./images/icons.svg#icon-antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="information-item-title">Strategy</h3>
                         <p class="information-item-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="information-item">
-                        <!-- <div class="information-icons"> -->
-                            <!-- <svg class=""> -->
-                                <!-- <use class=""></use> -->
-                            <!-- </svg> -->
-                        <!-- </div> -->
+                        <div class="information-item-icons">
+                            <svg class="info-icons" width="64" height="64">
+                                <use class="" href="./images/icons.svg#icon-clock-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="information-item-title">Punctuality</h3>
                         <p class="information-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="information-item">
-                        <!-- <div class="information-icons"> -->
-                            <!-- <svg class=""> -->
-                                <!-- <use class=""></use> -->
-                            <!-- </svg> -->
-                        <!-- </div> -->
+                        <div class="information-item-icons">
+                            <svg class="info-icons" width="64" height="64">
+                                <use class="" href="./images/icons.svg#icon-diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="information-item-title">Diligence</h3>
                         <p class="information-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="information-item">
-                        <!-- <div class="information-icons"> -->
-                            <!-- <svg class=""> -->
-                                <!-- <use class=""></use> -->
-                            <!-- </svg> -->
-                        <!-- </div> -->
+                        <div class="information-item-icons">
+                            <svg class="info-icons" width="64" height="64">
+                                <use class="" href="./images/icons.svg#icon-astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="information-item-title">Technologies</h3>
                         <p class="information-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
@@ -236,7 +242,7 @@
                 </ul>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio section">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
@@ -318,7 +324,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-top">
-                <a href="./index.html" class="footer-top-link">Web<span class="footer-top-span">Studio</span></a>
+                <a href="./index.html" class="footer-top-link navigation-link">Web<span class="footer-top-span">Studio</span></a>
                 <p class="footer-top-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div class="footer-soc">
@@ -355,7 +361,7 @@
                 </ul>
             </div>
             <div class="subscribe">
-                <p class="subscribe-title">Subscribe</p>
+                <p class="footer-soc-title">Subscribe</p>
                 <form class="subscribe-form">
                     <label class="subscribe-label">
                         <input type="email" name="" class="subscribe-label-input" placeholder="E-mail">
@@ -369,7 +375,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <!-- <div class="backdrop">
         <div class="modal">
             <button type="button" class="close-btn" >
                 <svg class="close-icon" width="8" height="8">
@@ -422,7 +428,7 @@
                 <button type="submit" class="modal-btn-submit">Send</button>
             </form>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
 
