--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoIT.WebStudio</title>
@@ -10,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header class="header">
@@ -37,12 +37,12 @@
         </div>
     </header>
     <main>
-        <!-- <section class="hero section">
-            <div class="container">
+        <section class="hero section">
+            <div class="container hero-wrap">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="hero-btn"><span class="hero-text-btn">Order Service</span></button>
             </div>
-        </section> -->
+        </section>
         <section class="information section">
             <div class="container">
                 <h2 class="visually-hidden">Information</h2>
@@ -248,7 +248,7 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-carts">
-                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img5.jpg" alt="Banking App" width="360" height="300">
+                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img5.jpg" alt="Banking App">
                             <p class="portfolio-carts-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                             App · Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -260,7 +260,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-carts">
-                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img6.jpg" alt="Cashless Payment" width="360" height="300">
+                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img6.jpg" alt="Cashless Payment">
                             <p class="portfolio-carts-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
                         </div>
@@ -271,7 +271,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-carts">
-                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img7.jpg" alt="Meditatio App" width="360" height="300">
+                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img7.jpg" alt="Meditatio App">
                             <p class="portfolio-carts-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                             App · Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -283,7 +283,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-carts">
-                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img8.jpg" alt="Taxi Service" width="360" height="300">
+                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img8.jpg" alt="Taxi Service">
                             <p class="portfolio-carts-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                             App · Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -295,7 +295,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-carts">
-                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img9.jpg" alt="Scren illustrations" width="360" height="300">
+                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img9.jpg" alt="Scren illustrations">
                             <p class="portfolio-carts-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                             App · Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -307,7 +307,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-carts">
-                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img10.jpg" alt="Online Courses" width="360" height="300">
+                            <img class="portfolio-carts-img" src="./images/our_Portfolio_img10.jpg" alt="Online Courses">
                             <p class="portfolio-carts-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                             App · Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -322,7 +322,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container botom-form">
             <div class="footer-top">
                 <a href="./index.html" class="footer-top-link navigation-link">Web<span class="footer-top-span">Studio</span></a>
                 <p class="footer-top-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -375,7 +375,7 @@
             </div>
         </div>
     </footer>
-    <!-- <div class="backdrop">
+    <div class="backdrop ">
         <div class="modal">
             <button type="button" class="close-btn" >
                 <svg class="close-icon" width="8" height="8">
@@ -385,39 +385,39 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="modal-field">
-                    <label for="" class="modal-field-label">Name</label>
+                    <label for="user-name" class="modal-field-label">Name</label>
                     <div class="modal-field-wrap">
-                        <input type="text" class="modal-wrap-input" name="" id="" autofocus>
+                        <input type="text" class="modal-wrap-input" name="user-name" id="user-name" autofocus>
                         <svg class="modal-wrap-icons" width="18" height="24">
                             <use class="" href="./images/icons.svg#icon-vector"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="" class="modal-field-label">Phone</label>
+                    <label for="user-tel" class="modal-field-label">Phone</label>
                     <div class="modal-field-wrap">
-                        <input type="tel" class="modal-wrap-input name" name="" id="">
+                        <input type="tel" class="modal-wrap-input name" name="user-tel" id="user-tel">
                         <svg class="modal-wrap-icons" width="18" height="24">
                             <use class="" href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="" class="modal-field-label">Email</label>
+                    <label for="user-email" class="modal-field-label">Email</label>
                     <div class="modal-field-wrap">
-                        <input type="text" class="modal-wrap-input" name="" id="">
+                        <input type="text" class="modal-wrap-input" name="user-email" id="user-email">
                         <svg class="modal-wrap-icons" width="18" height="24">
                             <use class="" href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
-                <div class="modal-field">
-                    <label for="" class="modal-field-label">Comment</label>
-                    <textarea class="coment-textarea" name="" id="" placeholder="Text input"></textarea>
+                <div class="modal-field com">
+                    <label for="user-comment" class="modal-field-label">Comment</label>
+                    <textarea class="coment-textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </div>
-                <div class="modal-field">
-                    <input type="checkbox" class="" name="" id="" value="true">
-                    <label for="" class="checkbox-label">
+                <div class="modal-field privace-policy">
+                    <input type="checkbox" class="modal-check visually-hidden" name="user-privacy" id="user-privacy" value="true">
+                    <label for="user-privacy" class="checkbox-label">
                         <span class="checkbox-wrap">
                             <svg class="checkbox-icon" width="10" height="8">
                                 <use class="" href="./images/icons.svg#icon-ok"></use>
@@ -428,7 +428,7 @@
                 <button type="submit" class="modal-btn-submit">Send</button>
             </form>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
 
